# jegp.cmake_modules

./: .cmake-format-additional_commands.yaml  .cmake-format.yaml  .gersemi_extension_jegp.cmake_modules.py  CMakeLists.txt  JEGPAddCompilerErrorTest.cmake  JEGPAddHeaderTest.cmake  JEGPAddTest.cmake  JEGPBuildError.cmake  JEGPTestUtilities.cmake  README.md  jegp_add_header_test.cmake  jegp_add_test.cmake
.detail/: JEGPAddTarget.cmake  JEGPBuildError_Check.cmake  JEGPBuildError_Generate.cmake  JEGPDefineVariables.cmake  JEGPParseArguments.cmake  JEGPStringJsonFind.cmake  JEGPUtilities.cmake
modules/: JEGPAddHeaderTest.cmake  JEGPAddModule.cmake  JEGPAddStandardeseSources.cmake  JEGPAddStandardeseSources.md  JEGPAddTest.cmake  JEGPAddTest.md  JEGPBuildError.cmake  JEGPBuildError.md  JEGPCpp2.cmake  JEGPCpp2.md  JEGPHeadersTest.cmake  JEGPProjectModules.cmake  JEGPTargetLinkHeaderUnits.cmake  JEGPTestUtilities.cmake
modules/.detail/: .cmake-format-additional_commands.yaml  JEGPAddTarget.cmake  JEGPCheckCpp2.cmake  JEGPCppUtilities.cmake  JEGPDefineTarget.cmake  JEGPDefineVariables.cmake  JEGPIncludeScript.cmake  JEGPOverload.cmake  JEGPParseArguments.cmake  JEGPReadExportedCompileCommand.cmake  JEGPSetScript.cmake  JEGPString.cmake  JEGPTestCompilerError.cmake  JEGPUtilities.cmake  SymlinkClangObjectAsPCM.cmake
modules/.detail/BuildError/: Check.cmake  GenerateBuildSource.cmake  GenerateDependenciesSource.cmake  GenerateErrorsFile.cmake
modules/.detail/HeadersTest/: CMakeLists.txt  Enforce.cmake  GenerateRequirementsFile.cmake
(+8 files in other folders)
